--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
   "dependencies": {
     "bootstrap": "v4.3.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "swup": "^2.0.5",
+    "tailwindcss": "^1.1.0"
   }
 }
