--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "bootstrap": "v4.3.1",
+    "formstone": "^1.4.16-1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "swup": "^2.0.5",
