--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/wp-content/themes/sage",
-  "devUrl": "http://athleticclub.dev.cc",
+  "devUrl": "http://latino.dev.cc",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
