--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.1.3",
     "bootstrap": "v4.3.1",
     "formstone": "^1.4.16-1",
     "glob-all": "^3.1.0",
@@ -83,6 +84,6 @@
     "popper.js": "^1.14.7",
     "purgecss-webpack-plugin": "^1.5.0",
     "swup": "^2.0.5",
-    "tailwindcss": "^1.1.0"
+    "tailwindcss": "^1.2.0"
   }
 }
