--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.1.3",
+    "alpinejs": "^2.3.3",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "v4.3.1",
+    "feather-icons": "^4.28.0",
     "formstone": "^1.4.16-1",
     "glob-all": "^3.1.0",
     "jquery": "^3.3.1",
