--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "purgecss-webpack-plugin": "^1.5.0",
+    "rellax": "^1.12.1",
     "swup": "^2.0.5",
     "tailwindcss": "^1.2.0"
   }
