--- a/package.json
+++ b/package.json
@@ -77,12 +77,15 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.2.0",
     "@tailwindcss/ui": "^0.3.0",
     "alpinejs": "^2.3.5",
     "aos": "^2.3.4",
     "feather-icons": "^4.28.0",
     "formstone": "^1.4.16-1",
+    "glob-all": "^3.2.1",
     "jquery": "^3.3.1",
+    "purgecss-webpack-plugin": "^1.5.0",
     "rellax": "^1.12.1"
   }
 }
