--- a/package.json
+++ b/package.json
@@ -56,17 +56,16 @@
     "imagemin-mozjpeg": "~7.0.0",
     "imagemin-webpack-plugin": "~2.2.0",
     "import-glob": "~1.5",
-    "node-sass": "~4.9.4",
+    "node-sass": "^4.13.1",
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
-    "resolve-url-loader": "~2.3.1",
+    "resolve-url-loader": "^3.1.1",
     "rimraf": "~2.6",
     "sass-loader": "~6.0",
     "style-loader": "^0.22.1",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "tailwindcss": "^1.4.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
@@ -77,15 +76,18 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@tailwindcss/ui": "^0.3.0",
-    "alpinejs": "^2.3.5",
-    "aos": "^2.3.4",
+    "@tailwindcss/ui": "^0.1.3",
+    "alpinejs": "^2.3.3",
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "v4.3.1",
     "feather-icons": "^4.28.0",
     "formstone": "^1.4.16-1",
-    "glob-all": "^3.2.1",
+    "glob-all": "^3.1.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "purgecss-webpack-plugin": "^1.5.0",
-    "rellax": "^1.12.1"
+    "rellax": "^1.12.1",
+    "swup": "^2.0.5",
+    "tailwindcss": "^1.2.0"
   }
 }
