--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "glob-all": "^3.2.1",
     "jquery": "^3.3.1",
     "purgecss-webpack-plugin": "^1.5.0",
-    "rellax": "^1.12.1"
+    "rellax": "^1.12.1",
+    "swup": "^2.0.9"
   }
 }
