--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "imagemin-mozjpeg": "~7.0.0",
     "imagemin-webpack-plugin": "~2.2.0",
     "import-glob": "~1.5",
-    "node-sass": "~4.9.4",
+    "node-sass": "^4.13.1",
     "postcss-loader": "~2.1.0",
     "postcss-safe-parser": "~3.0",
     "resolve-url-loader": "~2.3.1",
@@ -86,7 +86,6 @@
     "glob-all": "^3.2.1",
     "jquery": "^3.3.1",
     "purgecss-webpack-plugin": "^1.5.0",
-    "rellax": "^1.12.1",
-    "swup": "^2.0.9"
+    "rellax": "^1.12.1"
   }
 }
