--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "feather-icons": "^4.28.0",
     "formstone": "^1.4.16-1",
     "glob-all": "^3.2.1",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.3.1",
     "purgecss-webpack-plugin": "^1.5.0",
     "rellax": "^1.12.1"
