--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "isotope-layout": "^3.0.6",
     "jquery": "^3.3.1",
     "purgecss-webpack-plugin": "^1.5.0",
-    "rellax": "^1.12.1"
+    "rellax": "^1.12.1",
+    "tiny-slider": "^2.9.2"
   }
 }
