--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -8,7 +8,7 @@
       "./scripts/customizer.js"
     ]
   },
-  "publicPath": "/app/themes/sage",
+  "publicPath": "/app/themes/latino",
   "devUrl": "http://lppi.dev.cc",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
