--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
+    "@tailwindcss/ui": "^0.5.0",
+    "alpinejs": "^2.5.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "tailwindcss": "^1.6.2"
   }
 }
