--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "~18.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "tailwindcss": "^1.4.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
@@ -78,7 +77,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.2.0",
-    "@tailwindcss/ui": "^0.3.0",
+    "@tailwindcss/ui": "^0.5.0",
     "alpinejs": "^2.3.5",
     "aos": "^2.3.4",
     "feather-icons": "^4.28.0",
@@ -89,7 +88,8 @@
     "purgecss-webpack-plugin": "^1.5.0",
     "purgecss-with-wordpress": "^2.3.0",
     "rellax": "^1.12.1",
-    "tailwindcss-typography": "2.x",
+    "tailwindcss": "^1.6.2",
+    "tailwindcss-typography": "^3.1.0",
     "tiny-slider": "^2.9.2"
   }
 }
