--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
     "glob-all": "^3.2.1",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.3.1",
+    "lg-zoom": "^1.2.1",
+    "lightgallery.js": "^1.3.0",
+    "photoswipe": "^4.1.3",
     "purgecss-webpack-plugin": "^1.5.0",
     "purgecss-with-wordpress": "^2.3.0",
     "rellax": "^1.12.1",
