--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "devDependencies": {
     "autoprefixer": "~8.2.0",
-    "browser-sync": "~2.24.7",
+    "browser-sync": "^2.26.12",
     "browsersync-webpack-plugin": "^0.6.0",
-    "bs-html-injector": "~3.0",
+    "bs-html-injector": "^3.0.3",
     "buble-loader": "^0.4.1",
     "cache-loader": "~1.2.5",
     "clean-webpack-plugin": "^0.1.18",
@@ -87,6 +87,7 @@
     "jquery": "^3.3.1",
     "lg-zoom": "^1.2.1",
     "lightgallery.js": "^1.3.0",
+    "node-gyp": "^7.1.0",
     "photoswipe": "^4.1.3",
     "purgecss-webpack-plugin": "^1.5.0",
     "purgecss-with-wordpress": "^2.3.0",
