--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
   },
   "require": {
     "php": "^7.3|^8.0",
+    "log1x/sage-directives": "^1.1",
     "roots/acorn": "dev-main"
   },
   "require-dev": {
