--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "tailwindcss": "^2.0.3"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "alpinejs": "^2.8.0",
+    "feather-icons": "^4.28.0",
     "jquery": "^3.5.1"
   }
 }
