--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     "tailwindcss": "^2.0.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "alpinejs": "^2.8.0",
+    "aos": "^2.3.4",
     "feather-icons": "^4.28.0",
     "jquery": "^3.5.1"
   }
