--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "translate:js": "wp i18n make-json ./resources/lang --pretty-print"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.1",
     "@tailwindcss/typography": "^0.4.0",
     "@tinypixelco/laravel-mix-wp-blocks": "^1.1.0",
     "@wordpress/babel-preset-default": "^5.0.1",
@@ -51,6 +52,7 @@
     "aos": "^2.3.4",
     "feather-icons": "^4.28.0",
     "isotope-layout": "^3.0.6",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "tiny-slider": "^2.9.3"
   }
 }
