--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "feather-icons": "^4.28.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
-    "tiny-slider": "^2.9.3"
+    "tiny-slider": "^2.9.3",
+    "tippy.js": "^6.3.1"
   }
 }
